// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CheckBox basic usage 1`] = `
<div
  className="form-group"
>
  <input
    aria-checked={false}
    defaultChecked={false}
    disabled={false}
    id="asInput1"
    name="checkbox"
    onClick={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="asInput1"
  >
    check me out!
  </label>
</div>
`;

exports[`Storyshots CheckBox call a function 1`] = `
<div
  className="form-group"
>
  <input
    aria-checked={false}
    defaultChecked={false}
    disabled={false}
    id="asInput7"
    name="checkbox"
    onClick={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="asInput7"
  >
    check out the console
  </label>
</div>
`;

exports[`Storyshots CheckBox default checked 1`] = `
<div
  className="form-group"
>
  <input
    aria-checked={true}
    defaultChecked={true}
    disabled={false}
    id="asInput5"
    name="checkbox"
    onClick={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="asInput5"
  >
    (un)check me out
  </label>
</div>
`;

exports[`Storyshots CheckBox disabled 1`] = `
<div
  className="form-group"
>
  <input
    aria-checked={false}
    defaultChecked={false}
    disabled={true}
    id="asInput3"
    name="checkbox"
    onClick={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="asInput3"
  >
    you cannot check me out
  </label>
</div>
`;

exports[`Storyshots Dropdown basic usage 1`] = `
<div
  className="dropdown"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn-borderless dropdown-toggle btn btn-secondary"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    type="button"
  >
    Search Engines
  </button>
  <ul
    aria-hidden={true}
    aria-label="Search Engines"
    className="dropdown-menu"
    role="menu"
  >
    <li
      className="dropdown-item"
    >
      <a
        href="https://google.com"
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Google
      </a>
    </li>
    <li
      className="dropdown-item"
    >
      <a
        href="https://duckduckgo.com"
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        DuckDuckGo
      </a>
    </li>
    <li
      className="dropdown-item"
    >
      <a
        href="https://yahoo.com"
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        Yahoo
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots InputSelect basic usage 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput9"
  >
    Fruits
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput9"
    name="fruits"
    onBlur={[Function]}
    onChange={[Function]}
    type="select"
    value="strawberry"
  >
    <option
      value="apple"
    >
      apple
    </option>
    <option
      value="orange"
    >
      orange
    </option>
    <option
      value="strawberry"
    >
      strawberry
    </option>
    <option
      value="banana"
    >
      banana
    </option>
  </select>
</div>
`;

exports[`Storyshots InputSelect separate labels and values 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput10"
  >
    New England States
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput10"
    name="new-england-states"
    onBlur={[Function]}
    onChange={[Function]}
    type="select"
    value="RI"
  >
    <option
      value="CN"
    >
      Connecticut
    </option>
    <option
      value="ME"
    >
      Maine
    </option>
    <option
      value="MA"
    >
      Massachusetts
    </option>
    <option
      value="NH"
    >
      New Hampshire
    </option>
    <option
      value="RI"
    >
      Rhode Island
    </option>
    <option
      value="VT"
    >
      Vermont
    </option>
  </select>
</div>
`;

exports[`Storyshots InputSelect separate option groups 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput11"
  >
    Northeast States
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput11"
    name="northeast-states"
    onBlur={[Function]}
    onChange={[Function]}
    type="select"
    value="MD"
  >
    <optgroup
      label="New England States"
    >
      <option
        value="CN"
      >
        Connecticut
      </option>
      <option
        value="ME"
      >
        Maine
      </option>
      <option
        value="MA"
      >
        Massachusetts
      </option>
      <option
        value="NH"
      >
        New Hampshire
      </option>
      <option
        value="RI"
      >
        Rhode Island
      </option>
      <option
        value="VT"
      >
        Vermont
      </option>
    </optgroup>
    <optgroup
      label="Mid Atlantic States"
    >
      <option
        value="DE"
      >
        Delaware
      </option>
      <option
        value="MD"
      >
        Maryland
      </option>
      <option
        value="NJ"
      >
        New Jersey
      </option>
      <option
        value="NY"
      >
        New York
      </option>
      <option
        value="PA"
      >
        Pennsylvania
      </option>
      <option
        value="VA"
      >
        Virginia
      </option>
      <option
        value="DC"
      >
        Washington, DC
      </option>
      <option
        value="WV"
      >
        West Virginia
      </option>
    </optgroup>
  </select>
</div>
`;

exports[`Storyshots InputSelect with validation 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput12"
  >
    Favorite Color
  </label>
  <select
    aria-describedby={undefined}
    className="form-control"
    id="asInput12"
    name="color"
    onBlur={[Function]}
    onChange={[Function]}
    type="select"
    value=""
  >
    <option
      value=""
    >
      
    </option>
    <option
      value="red"
    >
      red
    </option>
    <option
      value="orange"
    >
      orange
    </option>
    <option
      value="yellow"
    >
      yellow
    </option>
    <option
      value="green"
    >
      green
    </option>
    <option
      value="blue"
    >
      blue
    </option>
    <option
      value="purple"
    >
      purple
    </option>
  </select>
</div>
`;

exports[`Storyshots InputText minimal usage 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput13"
  >
    First Name
  </label>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput13"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value="Foo Bar"
  />
</div>
`;

exports[`Storyshots InputText validation 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="asInput14"
  >
    Username
  </label>
  <input
    aria-describedby="undefined description-asInput14"
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="asInput14"
    name="username"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value=""
  />
  <small
    className="form-text"
    id="description-asInput14"
  >
    The unique name that identifies you throughout the site.
  </small>
</div>
`;

exports[`Storyshots Paragon Welcome 1`] = `
<div
  className="css-jail"
  style={
    Object {
      "fontFamily": "sans-serif",
    }
  }
>
  <div
    style={
      Object {
        "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
        "lineHeight": 1.4,
        "margin": 15,
        "maxWidth": 600,
      }
    }
  >
    <h1>
      💎 Paragon
    </h1>
    <p>
      This is a documentation and demo space for the Paragon accessible UI component library. Better docs coming soon, but for now, check out our existing components via the links to the left-hand side.
    </p>
    <p>
      Documentation generated with 
      <a
        href="https://github.com/kadirahq/react-storybook"
        rel="noopener noreferrer"
        target="_blank"
      >
        React Storybook
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`Storyshots Tabs basic usage 1`] = `
<div>
  <ul
    className="nav nav-tabs"
    role="tablist"
  >
    <li
      className="nav-item"
      id="tab-label-tabInterface15-0"
    >
      <a
        aria-controls="tab-panel-tabInterface15-0"
        aria-selected={true}
        className="nav-link active"
        onClick={[Function]}
        role="tab"
        tabIndex={0}
      >
        Panel 1
      </a>
    </li>
    <li
      className="nav-item"
      id="tab-label-tabInterface15-1"
    >
      <a
        aria-controls="tab-panel-tabInterface15-1"
        aria-selected={false}
        className="nav-link"
        onClick={[Function]}
        role="tab"
        tabIndex={-1}
      >
        Panel 2
      </a>
    </li>
    <li
      className="nav-item"
      id="tab-label-tabInterface15-2"
    >
      <a
        aria-controls="tab-panel-tabInterface15-2"
        aria-selected={false}
        className="nav-link"
        onClick={[Function]}
        role="tab"
        tabIndex={-1}
      >
        Panel 3
      </a>
    </li>
  </ul>
  <div
    className="tab-content"
  >
    <div
      aria-hidden={false}
      aria-labelledby="tab-label-tabInterface15-0"
      className="tab-pane active"
      id="tab-panel-tabInterface15-0"
      role="tabpanel"
    >
      <div>
        Hello I am the first panel
      </div>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="tab-label-tabInterface15-1"
      className="tab-pane"
      id="tab-panel-tabInterface15-1"
      role="tabpanel"
    >
      <div>
        Hello I am the second panel
      </div>
    </div>
    <div
      aria-hidden={true}
      aria-labelledby="tab-label-tabInterface15-2"
      className="tab-pane"
      id="tab-panel-tabInterface15-2"
      role="tabpanel"
    >
      <div>
        Hello I am the third panel
      </div>
    </div>
  </div>
</div>
`;
